# ADR_mission

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: constants.yaml  environment.yaml  search.yaml  simulation.yaml  training.yaml  transfer.yaml  vehicle.yaml
matlab/: visualize_orbit.m
scripts/: plot_dynamics_test.py
src/adr_mission/: constants.py  dynamics.py  logger.py  propagation.py  states.py  transfer_model.py  utils.py
src/adr_mission/orbit/: __init__.py  conversions.py  drag.py  eom_mee.py  frames.py  gravity.py  state_definitions.py  thrust.py
src/adr_mission/utils/: angle_utils.py  vec3.py
tests/: test_mee_matrix.py
